# mxp1

./: CMakeLists.txt
common/: camera.h  core.cpp  core.h  entity.cpp  entity.h  input.cpp  input.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sprite.cpp  sprite.h  texture.h  vector2.cpp  vector2.h
demo/: demo.cpp
demo/shaders/: sprite.frag
doc/: mxp1_class_diagram.graphml
game/: main.cpp  myScene.cpp  myScene.h
mxp1/: RenderSprite.h  camera.cpp  core.h  entity.cpp  entity.h  input.cpp  print.cpp  print.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  sprite.h  texture.cpp  vector2.cpp  vector2.h
mxp1/assets/: rgba.tga
